--- a/package.json
+++ b/package.json
@@ -1,30 +1,64 @@
 {
-  "name": "ismi",
+  "name": "create-a-npm",
+  "type": "module",
   "version": "0.0.0",
+  "author": "lmssee <lmssee@outlook.com>  (https://lmssee.com)",
+  "description": "a cli for create a node package module（一个一键生成一个符合特定规则 <就是一个简单的代码模板库> 的 npm 包",
   "scripts": {
-    "test": "echo 'welcome to see mi, yes , is mi'"
+    "b": "rollup --config rollup.config.js && tsc -p tsconfig.types.json",
+    "build": "npx ixxx rm dist run b",
+    "clean": "npx ixxx up -d rm dist node_modules run npm install run b",
+    "diff": "npx ixxx  pkg diff",
+    "test": "npx ixxx rm test/out &&  rollup --config rollup.config.test.js && npx ixxx cls   && node --trace-warnings  test/out/test/index.mjs cm",
+    "up": "npx ixxx up -n"
   },
   "files": [
-    "out",
-    "types"
+    "bin/",
+    "mjs/",
+    "types/"
   ],
   "keywords": [
-    "is mi"
+    "create-a-npm",
+    "create-a-node-package-module"
   ],
-  "author": "lmssee <lmssee@outlook.com>  (https://lmssee.com)",
   "license": "ISC",
-  "description": "I don't know what I want to do, but I just want to occupy this name, just like vast majority people do.Perhaps in the future, I will remember what to do with it, but now it's mine",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/lmssee/ismi.git"
+    "url": "git+https://github.com/lmssee/createANpm.git"
   },
-  "homepage": "https://lmssee.github.io/ismi",
+  "homepage": "https://lmssee.github.io/createANpm",
   "bugs": {
-    "url": "https://github.com/lmssee/ismi/issues",
+    "url": "https://github.com/lmssee/createANpm/issues",
     "email": "lmssee@outlook.com"
   },
   "publishConfig": {
     "access": "public",
     "registry": "https://registry.npmjs.org/"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.8.0",
+    "@rollup/plugin-commonjs": "^25.0.8",
+    "@rollup/plugin-json": "^6.1.0",
+    "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-terser": "^0.4.4",
+    "@rollup/plugin-typescript": "^11.1.6",
+    "@types/node": "^20.14.12",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "globals": "^15.8.0",
+    "prettier": "^3.3.3",
+    "rollup": "^4.19.1",
+    "rollup-plugin-cleanup": "^3.2.1",
+    "rollup-plugin-copy": "^3.5.0",
+    "typescript": "^5.5.4",
+    "typescript-eslint": "^7.17.0"
+  },
+  "bin": {
+    "create-a-npm": "bin/index.js"
+  },
+  "dependencies": {
+    "a-command": "^0.0.4",
+    "a-js-tools": "^0.0.0",
+    "a-node-tools": "^0.0.4"
   }
 }
