--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "create-a-npm",
   "type": "module",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "author": "lmssee <lmssee@outlook.com>  (https://lmssee.com)",
   "description": "a cli for create a node package module（一个一键生成一个符合特定规则 <就是一个简单的代码模板库> 的 npm 包",
   "scripts": {
@@ -9,8 +9,12 @@
     "build": "npx ixxx rm dist run b",
     "clean": "npx ixxx up -d rm dist node_modules run npm install run b",
     "diff": "npx ixxx  pkg diff",
-    "test": "npx ixxx rm test/out &&  rollup --config rollup.config.test.js && npx ixxx cls   && node --trace-warnings  test/out/test/index.mjs cm",
-    "up": "npx ixxx up -n"
+    "prettier": "npx prettier . --write",
+    "beautify": "npm run prettier",
+    "eslint": "npx eslint src",
+    "test": "npx ixxx rm test/out && rollup --config rollup.config.test.js && npx ixxx cls && node --trace-warnings  test/out/test/index.mjs cm -i",
+    "versionPatch": "npm version patch --force --no-git-tag-version --allow-same-version=true",
+    "up": "npm run versionPatch && npm run build && cd dist && npm publish && cd ../"
   },
   "files": [
     "bin/",
@@ -42,16 +46,16 @@
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-terser": "^0.4.4",
     "@rollup/plugin-typescript": "^11.1.6",
-    "@types/node": "^20.14.12",
+    "@types/node": "^20.14.13",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
-    "globals": "^15.8.0",
+    "globals": "^15.9.0",
     "prettier": "^3.3.3",
-    "rollup": "^4.19.1",
+    "rollup": "^4.19.2",
     "rollup-plugin-cleanup": "^3.2.1",
     "rollup-plugin-copy": "^3.5.0",
     "typescript": "^5.5.4",
-    "typescript-eslint": "^7.17.0"
+    "typescript-eslint": "^7.18.0"
   },
   "bin": {
     "create-a-npm": "bin/index.js"
